--- a/src/drive.css
+++ b/src/drive.css
@@ -416,3 +416,76 @@ h6 {
     opacity: 1;
   }
 }
+
+/* Modal Box */
+.modal-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+  z-index: 1500;
+}
+
+.modal-bg-active {
+  visibility: visible;
+  opacity: 1;
+}
+
+/* Modal Content */
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 65%;
+  min-height: 90vh;
+}
+
+.modal-content > h1 {
+  margin-bottom: 25px;
+}
+
+.modal-content > span {
+  font-size: 35px;
+  font-weight: 400;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+}
+/* Accordion */
+.accordion-container {
+  width: 90%;
+}
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc; 
+}
+
+.panel {
+  padding: 5px 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
